# lightcst

./: .gitignore  LICENSE.txt  README.md  README.md.backup  exampledocs.txt  lightcst-tree  requirements.txt  setup.cfg
.ipynb_checkpoints/: README-checkpoint.md
data/: LightStatus.csv  LightStatus.txt  LightStatus001.csv  LightStatus1.csv  LightStatus1.txt  LightStatus2.csv  LightStatus2.txt  LightStatus3.csv  LightStatus3.txt  LightStatus4.csv  LightStatus4.txt  LightStatus6.csv  LightStatus7.csv  LightStatus8.csv  LightStatusold.csv  LightStatustest.csv  Lighton.txt  Lighton1.txt  Lighton10.txt  Lighton2.txt  Lighton5.txt  Lighton6.txt  Lighton7.txt  Lighton9.csv
data/.ipynb_checkpoints/: LightStatus-checkpoint.csv
docs/: CalcLightTime.ipynb  Date and Time Scratch pad .ipynb  README.ipynb  Untitled.ipynb  devplan.ipynb  test_import.ipynb  testdatemethods.ipynb  testing _jnotebook.ipynb
docs/.ipynb_checkpoints/: CalcLightTime-checkpoint.ipynb  devplan-checkpoint.ipynb
examples/: example.py
lightcost_oop/: junk.py  lighttime.py  start.py  start_oop.py  start_oop_profile.txt  start_oop_profile1.txt
scrap/: light_time_anal.py  rdline.py
src/: CalcLightTime.ipynb  calclighttime.py  checkingontimes.py  devplan.ipynb  get_file.py  light_time_anal.py  lighttime.py  lighttime_cp.py  rdline.py  readline.py  readlineOld.py  start.py  start_cp.py  totaltimeon.py
src/.ipynb_checkpoints/: get_file-checkpoint.py  lighttime-checkpoint.py  rdline-checkpoint.py  readlineOld-checkpoint.py
tests/: examaple  tests.py
