[metadata]
name = lightcost
version = :0.0.0
license = <license name, e.g. MIT>
description = <A short description>
long_description = file: README.rst
author = Mike Lemon
author_email = <Optional: author e-mail>
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <requirement 1>
   <requirement 2>
   <...>
   <requirement n>

[options.packages.find]
where=src
